--- a/_solutions/pagerank.ipynb
+++ b/_solutions/pagerank.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,8 +215,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalization is useful to avoid numbers growing large and creating numerical problems. However, since the dominant eigenvalue of a stochastic matrix is never larger than one, we can also skip the normalization throughout the iterations in our specific case.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.  0.5 0.  0.  0.5 0. ]\n",
+      "[0.    0.167 0.5   0.167 0.    0.167]\n",
+      "[0.083 0.667 0.167 0.    0.083 0.   ]\n",
+      "[0.083 0.194 0.667 0.028 0.    0.028]\n",
+      "[0.097 0.694 0.194 0.    0.014 0.   ]\n",
+      "[0.097 0.199 0.694 0.005 0.    0.005]\n",
+      "[0.1   0.699 0.199 0.    0.002 0.   ]\n",
+      "[0.1   0.2   0.699 0.001 0.    0.001]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_0=np.array([0,0,0,0,0,1])\n",
+    "x_n=x_0\n",
+    "for i in range(14):\n",
+    "    x_n = np.dot(A1,x_n)\n",
+    "    print(x_n)\n",
+    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,24 +296,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "power_method() missing 1 required positional argument: 'niter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [39]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m x_0\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[43mpower_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_0\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: power_method() missing 1 required positional argument: 'niter'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.    0.707 0.    0.    0.707 0.   ]\n",
+      "[0.    0.289 0.866 0.289 0.    0.289]\n",
+      "[0.12  0.956 0.239 0.    0.12  0.   ]\n",
+      "[0.119 0.278 0.952 0.04  0.    0.04 ]\n",
+      "[0.134 0.954 0.267 0.    0.019 0.   ]\n",
+      "[0.133 0.273 0.953 0.006 0.    0.006]\n",
+      "[0.136 0.953 0.271 0.    0.003 0.   ]\n",
+      "[0.136 0.272 0.953 0.001 0.    0.001]\n",
+      "[0.136 0.953 0.272 0.    0.001 0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n",
+      "[0.136 0.953 0.272 0.    0.    0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n",
+      "[0.136 0.953 0.272 0.    0.    0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n",
+      "[0.136 0.953 0.272 0.    0.    0.   ]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.136, 0.953, 0.272, 0.   , 0.   , 0.   ])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,0,0,1])\n",
-    "power_method(x_0,15)"
+    "power_method(A1,x_0,15)"
    ]
   },
   {
@@ -273,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -302,14 +374,14 @@
        "array([0.707, 0.   , 0.707, 0.   , 0.   , 0.   ])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "power_method(x_0, 14)"
+    "power_method(A1, x_0, 14)"
    ]
   },
   {
@@ -321,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -351,14 +423,14 @@
        "array([0.707, 0.707, 0.   , 0.   , 0.   , 0.   ])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "power_method(x_0, 15)"
+    "power_method(A1, x_0, 15)"
    ]
   },
   {
@@ -375,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -385,12 +457,12 @@
        " array([[ 1.   ,  0.   ,  0.   , -0.408, -0.308, -0.173],\n",
        "        [ 0.   ,  0.707, -0.707,  0.   , -0.251,  0.141],\n",
        "        [ 0.   ,  0.707,  0.707, -0.408, -0.615, -0.346],\n",
-       "        [ 0.   ,  0.   , -0.   ,  0.816,  0.364,  0.487],\n",
-       "        [ 0.   ,  0.   , -0.   ,  0.   ,  0.446, -0.597],\n",
-       "        [ 0.   ,  0.   , -0.   ,  0.   ,  0.364,  0.487]]))"
+       "        [ 0.   ,  0.   ,  0.   ,  0.816,  0.364,  0.487],\n",
+       "        [ 0.   ,  0.   ,  0.   ,  0.   ,  0.446, -0.597],\n",
+       "        [ 0.   ,  0.   ,  0.   ,  0.   ,  0.364,  0.487]]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +510,7 @@
        "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +551,7 @@
        "array([0.167, 0.167, 0.167, 0.167, 0.167, 0.167])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,22 +564,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 1., -0.,  0.,  0.,  0.,  0.]),\n",
-       " array([[ 0.408,  0.   ,  0.767, -0.   , -0.   , -0.   ],\n",
-       "        [ 0.408,  0.894,  0.331, -0.134,  0.   ,  0.   ],\n",
-       "        [ 0.408, -0.224, -0.275,  0.89 ,  0.   ,  0.   ],\n",
-       "        [ 0.408, -0.224, -0.275, -0.252, -0.577, -0.577],\n",
-       "        [ 0.408, -0.224, -0.275, -0.252,  0.789, -0.211],\n",
-       "        [ 0.408, -0.224, -0.275, -0.252, -0.211,  0.789]]))"
+       "(array([ 1.,  0., -0.,  0.,  0.,  0.]),\n",
+       " array([[ 0.408,  0.   , -0.107, -0.   , -0.   , -0.   ],\n",
+       "        [ 0.408,  0.894,  0.91 , -0.082, -0.082, -0.082],\n",
+       "        [ 0.408, -0.224, -0.201, -0.478, -0.478, -0.478],\n",
+       "        [ 0.408, -0.224, -0.201,  0.85 , -0.146, -0.146],\n",
+       "        [ 0.408, -0.224, -0.201, -0.146,  0.85 , -0.146],\n",
+       "        [ 0.408, -0.224, -0.201, -0.146, -0.146,  0.85 ]]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +681,7 @@
        "array([0.525, 0.613, 0.576, 0.071, 0.078, 0.071])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,22 +700,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([ 1.   ,  0.85 , -0.85 ,  0.347, -0.347, -0.   ]),\n",
-       " array([[ 0.522,  0.816,  0.   ,  0.308, -0.173,  0.408],\n",
-       "        [ 0.618, -0.408,  0.707,  0.251,  0.141,  0.   ],\n",
+       " array([[ 0.522,  0.816, -0.   ,  0.308, -0.173,  0.408],\n",
+       "        [ 0.618, -0.408,  0.707,  0.251,  0.141, -0.   ],\n",
        "        [ 0.574, -0.408, -0.707,  0.615, -0.346,  0.408],\n",
        "        [ 0.071, -0.   , -0.   , -0.364,  0.487, -0.816],\n",
-       "        [ 0.078, -0.   ,  0.   , -0.446, -0.597,  0.   ],\n",
-       "        [ 0.071, -0.   , -0.   , -0.364,  0.487,  0.   ]]))"
+       "        [ 0.078,  0.   ,  0.   , -0.446, -0.597, -0.   ],\n",
+       "        [ 0.071, -0.   , -0.   , -0.364,  0.487, -0.   ]]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +819,7 @@
        "(14882, 886259)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +852,7 @@
        "(14882, 880639)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +881,7 @@
        "['Leonardo DiCaprio', 'Robert De Niro', 'Tom Hanks', 'Jamie Foxx', 'Al Pacino']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
