added solutions and asg eigenfaces

--- a/_solutions/eigenfaces/sheet8_sol.tex
+++ b/_solutions/eigenfaces/sheet8_sol.tex
@@ -244,7 +244,7 @@
 \end{enumerate}
 
 \clearpage
-\bibliography{../sources}
+\bibliography{../wienerpolygon/sources.bib}
 \bibliographystyle{plain}
 
 
