--- a/acme-material/Labs/Appendices/Installation/Installation.tex
+++ b/acme-material/Labs/Appendices/Installation/Installation.tex
@@ -103,7 +103,7 @@ executable \lstinline{python3}. For example to execute the script of the
 first (not graded) assignment:
 
 \begin{lstlisting}
-$ python3 asg0-tryout/tryout.py
+$ python3 asg-tryout/tryout.py
 \end{lstlisting}
 
 
