--- a/acme-material/Labs/Appendices/Setup/SetupStudent.tex
+++ b/acme-material/Labs/Appendices/Setup/SetupStudent.tex
@@ -1,31 +1,42 @@
 \lab{Getting Started}{Getting Started}
 
-The individual mandatory assignments (also referred to as ``labs'') in DM587/AI511 aim to introduce applications of Linear Algebra and to train your Python programming skills. There will be weekly programming tasks for which you have to submit a solution.
+The individual mandatory assignments (also referred to as ``labs'') in DM587 aim
+to introduce applications of Linear Algebra and to train your Python programming
+skills. There will be weekly programming tasks for which you have to submit a
+solution.
 
 \section*{Submitting Assignments} % ===========================================
 
 \subsection*{Labs}
 
-Every lab has a corresponding specifications file with some code to get you started and to make your submission compatible with automated test drivers. The template code will be provided via IMADA Git Server at \url{https://gitlab.sdu.dk}. 
-How to proceed in detail will be described below.
+Every lab has a corresponding specifications file with some code to get you
+started and to make your submission compatible with automated test drivers. The
+template code will be provided via IMADA Git Server at
+\url{https://gitlab.sdu.dk}.  How to proceed in detail will be described below.
 
 
-To submit a lab, modify the provided specifications file and use \texttt{git} to submit your solution (discussed in the next section).
-The submissions will be automatically graded. 
-The first assignment, \texttt{asg-tryout}, will not be graded and is just used to introduce you to the procedure of how you should submit your solutions and how your solution is graded. It has the specifications file \texttt{asg-tryout/tryout.py}.
-To complete that assignment, provide your implementation in the file \texttt{asg-tryout/tryout.py} and submit it via \texttt{git}.
-After grading, 
+To submit a lab, modify the provided specifications file and use \texttt{git} to
+submit your solution (discussed in the next section).  The submissions will be
+automatically graded.  The first assignment, \texttt{asg-tryout}, will not be
+graded and is just used to introduce you to the procedure of how you should
+submit your solutions and how your solution is graded. It has the specifications
+file \texttt{asg-tryout/tryout.py}.  To complete that assignment, provide your
+implementation in the file \texttt{asg-tryout/tryout.py} and submit it via
+\texttt{git}.  After submission, 
 %you will be able to get access to a file called \texttt{asg-tryout/grade.txt} with your score and some feedback. Alternatively, 
-you should visit the web page \url{https://dalila.imada.sdu.dk/} to see the outcome of your tests. Each assignment will have a formal deadline. 
-The final grade of each assignment will be based on your files as they are at the exact time of the deadline of the assignment.
+you should visit your git repository online to see the
+outcome of your tests. Each assignment will have a formal deadline.  The final
+grade of each assignment will be based on your files as they are at the exact
+time of the deadline of the assignment.
 
 
 \begin{warn}
 Do \textbf{not} move or rename the lab folders or the enclosed
 specifications files; if you do, the test drivers will not be able to
-find your assignment. Do \textbf{not} edit the files \texttt{.drone.yml} and 
-\texttt{grade.txt}, if present. These files are overwritten when you pull with git from
-the remote server and must stay unchanged. 
+find your assignment. Do \textbf{not} edit the file \texttt{.gitlab-ci.yml}.
+% and  \texttt{grade.txt}, if present. 
+%These files are overwritten when you pull with git from
+%the remote server and must stay unchanged. 
 \end{warn}
 
 
@@ -33,10 +44,15 @@ the remote server and must stay unchanged.
 \section*{Setup} % ============================================================
 
 \begin{warn}
-We strongly recommend using a Unix-based operating system (Mac or Linux or Windows Subsystem for Linux) for the labs.
-Unix has a true bash terminal, works well with git and python, and is the preferred platform for computational and data scientists.
-It is possible to do this curriculum with Windows, but expect some road bumps along the way. We will ensure that all the exercises can be solved in the \href{https://imada.sdu.dk/u/jlandersen/imada/it/complab.html}{IMADA Virtual Computer Lab}. 
-You can use your own environment, but you should not expect that we are able to answer your environment specific questions.
+We strongly recommend using a Unix-based operating system (Mac or Linux or
+Windows Subsystem for Linux) for the labs.  Unix has a true bash terminal, works
+well with git and python, and is the preferred platform for computational and
+data scientists.  It is possible to do this curriculum with Windows, but expect
+some road bumps along the way. We will ensure that all the exercises can be
+solved in the
+\href{https://imada.sdu.dk/u/jlandersen/imada/it/complab.html}{IMADA Virtual
+Computer Lab}.  You can use your own environment, but you should not expect that
+we are able to answer your environment specific questions.
 \end{warn}
 
 Code has to be submitted using git. 
@@ -91,7 +107,7 @@ $ <b<pwd>b>                 # pwd means 'print working directory'.
 
 # Clone the repository we provided
 
-$ git clone https://gitlab.sdu.dk/dm587-e24/username-repo.git
+$ git clone https://gitlab.sdu.dk/courses/dm587-e25/username-repo.git
 
 Cloning into 'username-repo'...
 Username for 'https://gitlab.sdu.dk': username
@@ -181,7 +197,7 @@ In a nutshell, for the Labs in DM587 you usually have to modify one file only. T
 \begin{info}
 When pulling updates with \li{git pull origin master}, your terminal may sometimes display the following message.
 \begin{lstlisting}
-Merge branch 'master' of https://gitlab.sdu.dk/<name>/<repo> into master
+Merge branch 'master' of https://gitlab.sdu.dk/courses/<name>/<repo> into master
 
 # Please enter a commit message to explain why this merge is necessary,
 # especially if it merges an updated upstream into a topic branch.
@@ -229,7 +245,7 @@ remote: Counting objects: 4, done.
 remote: Compressing objects: 100% (4/4), done.
 remote: Total 4 (delta 2), reused 0 (delta 0)
 Unpacking objects: 100% (4/4), done.
-From https://gitlab.sdu.dk/dm587-e24/username-repo
+From https://gitlab.sdu.dk/courses/dm587-e25/username-repo
    6dde06d..e24cee5  master     -> origin/master
 Updating 6dde06d..e24cee5
 Fast-forward
@@ -277,7 +293,7 @@ Delta compression using up to 8 threads
 Compressing objects: 100% (4/4), done.
 Writing objects: 100% (4/4), 373 bytes | 373.00 KiB/s, done.
 Total 4 (delta 2), reused 0 (delta 0)
-To https://gitlab.sdu.dk/dm587-e24/username-repo.git
+To https://gitlab.sdu.dk/courses/dm587-e25/username-repo.git
    e24cee5..72a5ab3  master -> master
 
 
