--- a/acme-material/Labs/Appendices/Setup/SetupStudent.tex
+++ b/acme-material/Labs/Appendices/Setup/SetupStudent.tex
@@ -25,9 +25,21 @@ implementation in the file \texttt{asg-tryout/tryout.py} and submit it via
 \texttt{git}.  After submission, 
 %you will be able to get access to a file called \texttt{asg-tryout/grade.txt} with your score and some feedback. Alternatively, 
 you should visit your git repository online to see the
-outcome of your tests. Each assignment will have a formal deadline.  The final
+outcome of your tests (see Figure~\ref{gitlabview}). Each assignment will have a formal deadline.  The final
 grade of each assignment will be based on your files as they are at the exact
 time of the deadline of the assignment.
+
+
+%\begin{figure}[tb]
+%\includegraphics[width=\textwidth]{browsing}
+%\end{figure}
+
+
+\begin{figure}[tbp]
+\includegraphics[width=\textwidth]{locate}
+\includegraphics[width=\textwidth]{output}
+\caption{\label{gitlabview} Finding the outcome of the autmoated tests in gitlab.}
+\end{figure}
 
 
 \begin{warn}
