--- a/_solutions/python_rasmus.ipynb
+++ b/_solutions/python_rasmus.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "source": [
-    "## Solutions to Sheet 3 by Rasmus Kornbeck"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Solutions to Sheet 1"
+   ]
   },
   {
    "cell_type": "code",
@@ -24,25 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "523.5983333333332"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# problem 1\n",
-    "def sphere_volume(r):\n",
+    "def sphere_volume(r: float) -> float:\n",
     "    \"\"\"Returns the volume of a sphere\"\"\"\n",
     "    return 4/3 * 3.14159 * r**3\n",
     "\n",
@@ -57,8 +57,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1     2     3 4 5\n"
      ]
@@ -66,7 +66,7 @@
    ],
    "source": [
     "# problem 2\n",
-    "def isolate(a, b, c, d, e):\n",
+    "def isolate(a: int, b: int, c: int, d: int, e: int) -> None:\n",
     "    \"\"\"Print first two values with 5 spaces rest with one\"\"\"\n",
     "    print(a, b, sep=\"     \", end=\"     \")\n",
     "    print(c, d, e)\n",
@@ -76,14 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "12\n"
      ]
@@ -91,23 +98,23 @@
    ],
    "source": [
     "# problem 3.1\n",
-    "def first_half(string):\n",
-    "    half = int(len(string)/2)  # int() removes the comma\n",
-    "    print(string[:half])\n",
+    "def first_half(sin: string):\n",
+    "    half = int(len(sin)/2)  # int() removes the comma\n",
+    "    print(sin[:half])\n",
     "\n",
     "first_half(\"12345\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "dcba\n"
      ]
@@ -115,8 +122,8 @@
    ],
    "source": [
     "# problem 3.2\n",
-    "def backward(string):\n",
-    "    print(string[::-1]) # [start:end:step]\n",
+    "def backward(sin: string):\n",
+    "    print(sin[::-1]) # [start:end:step]\n",
     "\n",
     "backward(\"abcd\")"
    ]
@@ -129,21 +136,27 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "1: ['bear', 'ant', 'cat', 'dog']\n2: ['bear', 'ant', 'cat', 'dog', 'eagle']\n3: ['bear', 'ant', 'fox', 'dog', 'eagle']\n4: ['bear', 'fox', 'dog', 'eagle']\n5: ['eagle', 'dog', 'fox', 'bear']\n6: ['hawk', 'dog', 'fox', 'bear']\n7: ['hawk', 'dog', 'fox', 'bear', 'hunter']\n"
+      "1: ['bear', 'ant', 'cat', 'dog']\n",
+      "2: ['bear', 'ant', 'cat', 'dog', 'eagle']\n",
+      "3: ['bear', 'ant', 'fox', 'dog', 'eagle']\n",
+      "4: ['bear', 'fox', 'dog', 'eagle']\n",
+      "5: ['eagle', 'dog', 'fox', 'bear']\n",
+      "6: ['hawk', 'dog', 'fox', 'bear']\n",
+      "7: ['hawk', 'dog', 'fox', 'bear', 'hunter']\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['hawk', 'dog', 'fox', 'bear', 'hunter']"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -169,8 +182,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "aesop rockhay\n"
      ]
@@ -200,8 +213,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "906609\n"
      ]
@@ -231,8 +244,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0.7833333333333332\n"
      ]
@@ -255,14 +268,14 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.7833333333333332"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -286,8 +299,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(2, 5, 3.5)\n"
      ]
@@ -309,10 +322,24 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "int1: 3, int2: 1, equals?: False\nint1 id: 4388964720, int2 id: 4388964656, equals?: False\n\nstr1: bar, str2: foo, equals?: False\nstr1 id: 4396523312, str2 id: 4396523440, equals?: False\n\nlist1: [10, 2, 3], list2: [10, 2, 3], equals?: True\nlist1 id: 4584247744, list2 id: 4584247744, equals?: True\n\ntuple1: (1, 2, 3, 1), tuple2: (1, 2, 3), equals?: False\ntuple1 id: 4550627792, tuple2 id: 4428778368, equals?: False\n\nset1: {2, 3}, set2: {2, 3}, equals?: True\nset1 id: 4428894720, set2 id: 4428894720, equals?: True\n\n"
+      "int1: 3, int2: 1, equals?: False\n",
+      "int1 id: 4388964720, int2 id: 4388964656, equals?: False\n",
+      "\n",
+      "str1: bar, str2: foo, equals?: False\n",
+      "str1 id: 4396523312, str2 id: 4396523440, equals?: False\n",
+      "\n",
+      "list1: [10, 2, 3], list2: [10, 2, 3], equals?: True\n",
+      "list1 id: 4584247744, list2 id: 4584247744, equals?: True\n",
+      "\n",
+      "tuple1: (1, 2, 3, 1), tuple2: (1, 2, 3), equals?: False\n",
+      "tuple1 id: 4550627792, tuple2 id: 4428778368, equals?: False\n",
+      "\n",
+      "set1: {2, 3}, set2: {2, 3}, equals?: True\n",
+      "set1 id: 4428894720, set2 id: 4428894720, equals?: True\n",
+      "\n"
      ]
     }
    ],
@@ -363,14 +390,14 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "13"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -400,8 +427,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2\n"
      ]
@@ -421,14 +448,14 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0, {'1'}, {'2'}, {'3'}, {'12'}, {'13'}, {'23'}, {'123'}]"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 15
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -536,10 +563,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Contents:  ['book', 'pencil case']\n<<Owner:\tfoo\nColor:\t\tgreen\nSize:\t\t2\nMax Size:\t4\nContents:\t['book', 'pencil case']>>\nTrue\n"
+      "Contents:  ['book', 'pencil case']\n",
+      "<<Owner:\tfoo\n",
+      "Color:\t\tgreen\n",
+      "Size:\t\t2\n",
+      "Max Size:\t4\n",
+      "Contents:\t['book', 'pencil case']>>\n",
+      "True\n"
      ]
     }
    ],
@@ -614,21 +647,21 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Process completed\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-4"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -657,16 +690,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "File not found. Try another name.\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "KeyboardInterrupt",
      "evalue": "Interrupted by user",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -713,15 +746,15 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ 37,  14, -32, -10],\n",
        "       [-54,  -7,  58,  65]])"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -742,7 +775,6 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[0, 0, 0],\n",
@@ -750,8 +782,9 @@
        "       [0, 0, 0]])"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -771,14 +804,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[1. 1. 1. 1. 1. 1. 1.]\n [0. 1. 1. 1. 1. 1. 1.]\n [0. 0. 1. 1. 1. 1. 1.]\n [0. 0. 0. 1. 1. 1. 1.]\n [0. 0. 0. 0. 1. 1. 1.]\n [0. 0. 0. 0. 0. 1. 1.]\n [0. 0. 0. 0. 0. 0. 1.]]\n"
+      "[[1. 1. 1. 1. 1. 1. 1.]\n",
+      " [0. 1. 1. 1. 1. 1. 1.]\n",
+      " [0. 0. 1. 1. 1. 1. 1.]\n",
+      " [0. 0. 0. 1. 1. 1. 1.]\n",
+      " [0. 0. 0. 0. 1. 1. 1.]\n",
+      " [0. 0. 0. 0. 0. 1. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]]\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ -7.,  -8.,  -3.,   8.,  25.,  48.,  77.],\n",
@@ -790,8 +828,9 @@
        "       [ -1.,  -2.,  -3.,  -4.,  -5.,  -6.,  -7.]])"
       ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -816,15 +855,15 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ 0,  5],\n",
        "       [ 0, 20]])"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -845,7 +884,6 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ 0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.],\n",
@@ -857,8 +895,9 @@
        "       [ 3.,  3.,  3.,  0.,  0.,  0.,  0., -2.]])"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -883,15 +922,15 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[0.4, 0.6],\n",
        "       [0.6, 0.4]])"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -907,16 +946,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
-   "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
+   "display_name": ".venv (3.13.0)",
    "language": "python",
    "name": "python3"
   },
@@ -930,7 +960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.13.0"
   },
   "name": "sheet1_sols.ipynb"
  },
