--- a/_solutions/python_rasmus.ipynb
+++ b/_solutions/python_rasmus.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -674,7 +674,7 @@
     "        for i in range(int(max_iters)):\n",
     "            walk += choice(directions)\n",
     "    except KeyboardInterrupt:\n",
-    "        print(\"Process interupted at iteration \" + str(i))\n",
+    "        print(\"Process interrupted at iteration \" + str(i))\n",
     "    else:\n",
     "        print(\"Process completed\")\n",
     "    return walk\n",
