--- a/_solutions/intro_basics1.ipynb
+++ b/_solutions/intro_basics1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
        "523.5983333333332"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +33,13 @@
     "\n",
     "sphere_volume(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -706,7 +713,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.0)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.2"
   },
   "name": "sheet1_sols.ipynb"
  },
