--- a/_solutions/pagerank.ipynb
+++ b/_solutions/pagerank.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "0.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +118,107 @@
     "    x_n = x_n/np.linalg.norm(x_n,ord=2)\n",
     "    print(x_n)\n",
     "x_n/np.linalg.norm(x_n,1) # we mormalise to obtain again probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.  0.5 0.  0.  0.5 0. ]\n",
+      "[0.    0.167 0.5   0.167 0.    0.167]\n",
+      "[0.083 0.667 0.167 0.    0.083 0.   ]\n",
+      "[0.083 0.194 0.667 0.028 0.    0.028]\n",
+      "[0.097 0.694 0.194 0.    0.014 0.   ]\n",
+      "[0.097 0.199 0.694 0.005 0.    0.005]\n",
+      "[0.1   0.699 0.199 0.    0.002 0.   ]\n",
+      "[0.1   0.2   0.699 0.001 0.    0.001]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Power method with sum (L_1 norm) Scaling:\n",
+    "x_0=np.array([0,0,0,0,0,1])\n",
+    "x_n=x_0\n",
+    "for i in range(14):\n",
+    "    x_n = np.dot(A1,x_n)\n",
+    "    x_n = x_n/np.linalg.norm(x_n,ord=1)\n",
+    "    print(x_n)\n",
+    "x_n # /np.linalg.norm(x_n,1) # we do not need to normalise "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 0. 0. 1. 0.]\n",
+      "[0.    0.333 1.    0.333 0.    0.333]\n",
+      "[0.125 1.    0.25  0.    0.125 0.   ]\n",
+      "[0.125 0.292 1.    0.042 0.    0.042]\n",
+      "[0.14 1.   0.28 0.   0.02 0.  ]\n",
+      "[0.14  0.287 1.    0.007 0.    0.007]\n",
+      "[0.142 1.    0.285 0.    0.003 0.   ]\n",
+      "[0.142 0.286 1.    0.001 0.    0.001]\n",
+      "[0.143 1.    0.286 0.    0.001 0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n",
+      "[0.143 1.    0.286 0.    0.    0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n",
+      "[0.143 1.    0.286 0.    0.    0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Power method with maximum entry (L_\\infty norm) Scaling:\n",
+    "x_0=np.array([0,0,0,0,0,1])\n",
+    "x_n=x_0\n",
+    "for i in range(14):\n",
+    "    x_n = np.dot(A1,x_n)\n",
+    "    x_n = x_n/np.linalg.norm(x_n,ord=np.inf)\n",
+    "    print(x_n)\n",
+    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalization is useful to avoid numbers growing large and creating numerical problems. However, since the dominant eigenvalue of a stochastic matrix is never larger than one, we can also skip the normalization throughout the iterations in our specific case.  "
    ]
   },
   {
@@ -157,118 +258,17 @@
     }
    ],
    "source": [
-    "# Power method with sum (L_1 norm) Scaling:\n",
     "x_0=np.array([0,0,0,0,0,1])\n",
     "x_n=x_0\n",
     "for i in range(14):\n",
     "    x_n = np.dot(A1,x_n)\n",
-    "    x_n = x_n/np.linalg.norm(x_n,ord=1)\n",
     "    print(x_n)\n",
-    "x_n # /np.linalg.norm(x_n,1) # we do not need to normalise "
+    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 1. 0. 0. 1. 0.]\n",
-      "[0.    0.333 1.    0.333 0.    0.333]\n",
-      "[0.125 1.    0.25  0.    0.125 0.   ]\n",
-      "[0.125 0.292 1.    0.042 0.    0.042]\n",
-      "[0.14 1.   0.28 0.   0.02 0.  ]\n",
-      "[0.14  0.287 1.    0.007 0.    0.007]\n",
-      "[0.142 1.    0.285 0.    0.003 0.   ]\n",
-      "[0.142 0.286 1.    0.001 0.    0.001]\n",
-      "[0.143 1.    0.286 0.    0.001 0.   ]\n",
-      "[0.143 0.286 1.    0.    0.    0.   ]\n",
-      "[0.143 1.    0.286 0.    0.    0.   ]\n",
-      "[0.143 0.286 1.    0.    0.    0.   ]\n",
-      "[0.143 1.    0.286 0.    0.    0.   ]\n",
-      "[0.143 0.286 1.    0.    0.    0.   ]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Power method with maximum entry (L_\\infty norm) Scaling:\n",
-    "x_0=np.array([0,0,0,0,0,1])\n",
-    "x_n=x_0\n",
-    "for i in range(14):\n",
-    "    x_n = np.dot(A1,x_n)\n",
-    "    x_n = x_n/np.linalg.norm(x_n,ord=np.inf)\n",
-    "    print(x_n)\n",
-    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Normalization is useful to avoid numbers growing large and creating numerical problems. However, since the dominant eigenvalue of a stochastic matrix is never larger than one, we can also skip the normalization throughout the iterations in our specific case.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.  0.5 0.  0.  0.5 0. ]\n",
-      "[0.    0.167 0.5   0.167 0.    0.167]\n",
-      "[0.083 0.667 0.167 0.    0.083 0.   ]\n",
-      "[0.083 0.194 0.667 0.028 0.    0.028]\n",
-      "[0.097 0.694 0.194 0.    0.014 0.   ]\n",
-      "[0.097 0.199 0.694 0.005 0.    0.005]\n",
-      "[0.1   0.699 0.199 0.    0.002 0.   ]\n",
-      "[0.1   0.2   0.699 0.001 0.    0.001]\n",
-      "[0.1 0.7 0.2 0.  0.  0. ]\n",
-      "[0.1 0.2 0.7 0.  0.  0. ]\n",
-      "[0.1 0.7 0.2 0.  0.  0. ]\n",
-      "[0.1 0.2 0.7 0.  0.  0. ]\n",
-      "[0.1 0.7 0.2 0.  0.  0. ]\n",
-      "[0.1 0.2 0.7 0.  0.  0. ]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_0=np.array([0,0,0,0,0,1])\n",
-    "x_n=x_0\n",
-    "for i in range(14):\n",
-    "    x_n = np.dot(A1,x_n)\n",
-    "    print(x_n)\n",
-    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
     "        x_n = np.dot(A,x_n)\n",
     "        x_n = x_n/np.linalg.norm(x_n,ord=scaling)\n",
     "        print(x_n)\n",
-    "    x_n/np.linalg.norm(x_n,ord=1) # we mormalise to obtain again probabilities\n",
+    "    x_n = x_n/np.linalg.norm(x_n,ord=1) # we mormalise to obtain again probabilities\n",
     "    return x_n"
    ]
   },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -323,10 +323,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.136, 0.953, 0.272, 0.   , 0.   , 0.   ])"
+       "array([0.1, 0.7, 0.2, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -371,10 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.707, 0.   , 0.707, 0.   , 0.   , 0.   ])"
+       "array([0.5, 0. , 0.5, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -420,10 +420,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.707, 0.707, 0.   , 0.   , 0.   , 0.   ])"
+       "array([0.5, 0.5, 0. , 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,29 +440,29 @@
     "So the Markov process does not converge. \n",
     "\n",
     "Remember that:\n",
-    "If a Markov chain converges to a steady-state vector $\\vec x$, if $\\lambda_1=1$ is a dominat eigenvalue of $A$.\n",
+    "a Markov chain converges to a steady-state vector $\\vec x$, if $A$ is a positive\n",
+    "stochastic matrix in which case $\\lambda_1=1$ is a unique dominant eigenvalue of $A$.\n",
     "\n",
     "Let's have a look at the eigenvalues of the transition matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 1.   ,  1.   , -1.   ,  0.   ,  0.408, -0.408]),\n",
-       " array([[ 1.   ,  0.   ,  0.   , -0.408, -0.308, -0.173],\n",
-       "        [ 0.   ,  0.707, -0.707,  0.   , -0.251,  0.141],\n",
-       "        [ 0.   ,  0.707,  0.707, -0.408, -0.615, -0.346],\n",
-       "        [ 0.   ,  0.   ,  0.   ,  0.816,  0.364,  0.487],\n",
-       "        [ 0.   ,  0.   ,  0.   ,  0.   ,  0.446, -0.597],\n",
-       "        [ 0.   ,  0.   ,  0.   ,  0.   ,  0.364,  0.487]]))"
+       "EigResult(eigenvalues=array([ 1.   ,  1.   , -1.   ,  0.   ,  0.408, -0.408]), eigenvectors=array([[ 1.   ,  0.   ,  0.   , -0.408, -0.308, -0.173],\n",
+       "       [ 0.   ,  0.707, -0.707,  0.   , -0.251,  0.141],\n",
+       "       [ 0.   ,  0.707,  0.707, -0.408, -0.615, -0.346],\n",
+       "       [ 0.   ,  0.   ,  0.   ,  0.816,  0.364,  0.487],\n",
+       "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.446, -0.597],\n",
+       "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.364,  0.487]]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,15 @@
     "A stochastic matrix has the following properties.\n",
     "The largest absolute value of a stochastic matrix is at most 1 by Gershgorin circle theorem (not discussed in class). Additionally, every stochastic matrix has an \"obvious\" column eigenvector associated to the eigenvalue 1: the vector ${\\boldsymbol {1}}$, whose coordinates are all equal to 1. \n",
     "\n",
-    "On the other hand, Perron theorem applied to stochastic matrices tells us that if the stochastic matrix is positive then it has a dominant eigenvalue $\\lambda = 1$. More generally, Frobenius theorem tells us that if the stochastic matrix is nonnegative and irreducible then again it has a dominant eigenvalue $\\lambda = 1$. However, in general stochastic matrices need not be positive or irreducible. \n",
+    "On the other hand, Perron theorem applied to stochastic matrices tells us that\n",
+    "if the stochastic matrix is positive then it has a dominant eigenvalue $\\lambda\n",
+    "= 1$. More generally, Frobenius theorem tells us that if the stochastic matrix\n",
+    "is nonnegative and irreducible (there is a non-zero probability of\n",
+    "transitioning, even if in more than one step, from any state to any other state)\n",
+    "then again it has a dominant eigenvalue\n",
+    "$\\lambda = 1$. However, in general stochastic matrices need not be positive or\n",
+    "irreducible. (See [here](https://en.wikipedia.org/wiki/Perron%E2%80%93Frobenius_theorem#Classification_of_matrices)\n",
+    "for more details and precise definitions of these matrices).\n",
     "\n",
     "In the next subtask we try to modify the transition matrix such that it has all entries positive (no zeros) such that Perron's theorem applies and the corresponding process converges.\n",
     "\n",
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +518,7 @@
        "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +559,7 @@
        "array([0.167, 0.167, 0.167, 0.167, 0.167, 0.167])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,22 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 1.,  0., -0.,  0.,  0.,  0.]),\n",
-       " array([[ 0.408,  0.   , -0.107, -0.   , -0.   , -0.   ],\n",
-       "        [ 0.408,  0.894,  0.91 , -0.082, -0.082, -0.082],\n",
-       "        [ 0.408, -0.224, -0.201, -0.478, -0.478, -0.478],\n",
-       "        [ 0.408, -0.224, -0.201,  0.85 , -0.146, -0.146],\n",
-       "        [ 0.408, -0.224, -0.201, -0.146,  0.85 , -0.146],\n",
-       "        [ 0.408, -0.224, -0.201, -0.146, -0.146,  0.85 ]]))"
+       "(array([ 1., -0.,  0.,  0.,  0.,  0.]),\n",
+       " array([[ 0.408, -0.517,  0.   , -0.   ,  0.   ,  0.   ],\n",
+       "        [ 0.408,  0.841,  0.894, -0.765,  0.   ,  0.   ],\n",
+       "        [ 0.408, -0.081, -0.224,  0.64 , -0.   , -0.   ],\n",
+       "        [ 0.408, -0.081, -0.224,  0.041, -0.577, -0.577],\n",
+       "        [ 0.408, -0.081, -0.224,  0.041,  0.789, -0.211],\n",
+       "        [ 0.408, -0.081, -0.224,  0.041, -0.211,  0.789]]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -678,10 +686,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.525, 0.613, 0.576, 0.071, 0.078, 0.071])"
+       "array([0.272, 0.317, 0.298, 0.036, 0.041, 0.036])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,11 +759,6 @@
    "source": [
     "The slight discrepancies might be due to rounding erros or to an insufficient number of iterations in the power method. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
